[gd_scene load_steps=42 format=2]

[ext_resource path="res://player/player.gd" type="Script" id=1]
[ext_resource path="res://player/Bunny-Sheet_64x64.png" type="Texture" id=2]
[ext_resource path="res://player/Hit.wav" type="AudioStream" id=3]
[ext_resource path="res://player/Enemy Death.wav" type="AudioStream" id=4]
[ext_resource path="res://player/Dash_Particle.png" type="Texture" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.51942
height = 1.18921

[sub_resource type="Animation" id=2]
resource_name = "idle_left"
length = 0.3
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 40, 41 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle_left_down"
length = 0.3
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 44, 45 ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle_left_up"
length = 0.3
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 36, 37 ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle_right"
length = 0.3
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 28, 29 ]
}

[sub_resource type="Animation" id=6]
resource_name = "idle_right_down"
length = 0.3
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 24, 25 ]
}

[sub_resource type="Animation" id=7]
resource_name = "idle_right_up"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 32, 33 ]
}

[sub_resource type="Animation" id=8]
resource_name = "walk_left"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 19, 16 ]
}

[sub_resource type="Animation" id=9]
resource_name = "walk_left_down"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=10]
resource_name = "walk_left_up"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=11]
resource_name = "walk_right"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 4 ]
}

[sub_resource type="Animation" id=12]
resource_name = "walk_right_down"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=13]
resource_name = "walk_right_up"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "idle_left_down"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "idle_right_down"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "idle_left_down"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "idle_right_up"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "idle_left"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "idle_right"

[sub_resource type="AnimationNodeBlendSpace2D" id=20]
auto_triangles = false
blend_point_0/node = SubResource( 14 )
blend_point_0/pos = Vector2( -1, 1 )
blend_point_1/node = SubResource( 15 )
blend_point_1/pos = Vector2( 1, 1 )
blend_point_2/node = SubResource( 16 )
blend_point_2/pos = Vector2( -1, -1 )
blend_point_3/node = SubResource( 17 )
blend_point_3/pos = Vector2( 1, -1 )
blend_point_4/node = SubResource( 18 )
blend_point_4/pos = Vector2( -1, 0 )
blend_point_5/node = SubResource( 19 )
blend_point_5/pos = Vector2( 1, 0 )
triangles = PoolIntArray( 0, 1, 5, 0, 4, 5, 2, 3, 5, 2, 4, 5 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "walk_left_down"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "walk_left"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "walk_right"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "walk_right_down"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "walk_right_up"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "walk_left_up"

[sub_resource type="AnimationNodeBlendSpace2D" id=27]
blend_point_0/node = SubResource( 21 )
blend_point_0/pos = Vector2( -1, 1 )
blend_point_1/node = SubResource( 22 )
blend_point_1/pos = Vector2( -1, 0 )
blend_point_2/node = SubResource( 23 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 24 )
blend_point_3/pos = Vector2( 1, 1 )
blend_point_4/node = SubResource( 25 )
blend_point_4/pos = Vector2( 1, -1 )
blend_point_5/node = SubResource( 26 )
blend_point_5/pos = Vector2( -1, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachine" id=30]
states/idle/node = SubResource( 20 )
states/idle/position = Vector2( 402, 118 )
states/walk/node = SubResource( 27 )
states/walk/position = Vector2( 573, 118 )
transitions = [ "idle", "walk", SubResource( 28 ), "walk", "idle", SubResource( 29 ) ]
start_node = "idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=31]

[sub_resource type="StyleBoxFlat" id=32]
bg_color = Color( 0.243137, 0.619608, 0.164706, 1 )

[sub_resource type="StyleBoxFlat" id=33]

[sub_resource type="CapsuleShape2D" id=34]
radius = 4.01384
height = 9.15234

[sub_resource type="CanvasItemMaterial" id=35]
particles_animation = true
particles_anim_h_frames = 7
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id=36]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.0901961 )

[node name="player" type="KinematicBody2D" groups=[
"player",
]]
position = Vector2( 0.891907, -9.21634 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.148651, 3.27032 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -0.148651 )
texture = ExtResource( 2 )
vframes = 13
hframes = 4
frame = 25

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle_left = SubResource( 2 )
anims/idle_left_down = SubResource( 3 )
anims/idle_left_up = SubResource( 4 )
anims/idle_right = SubResource( 5 )
anims/idle_right_down = SubResource( 6 )
anims/idle_right_up = SubResource( 7 )
anims/walk_left = SubResource( 8 )
anims/walk_left_down = SubResource( 9 )
anims/walk_left_up = SubResource( 10 )
anims/walk_right = SubResource( 11 )
anims/walk_right_down = SubResource( 12 )
anims/walk_right_up = SubResource( 13 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 30 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 31 )
parameters/idle/blend_position = Vector2( 0.951638, 0.594828 )
parameters/walk/blend_position = Vector2( -0.652106, -0.0775862 )

[node name="HealthBar" type="ProgressBar" parent="."]
margin_left = -6.62164
margin_top = -14.1703
margin_right = 8.37837
margin_bottom = -11.1703
custom_styles/fg = SubResource( 32 )
custom_styles/bg = SubResource( 33 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -1 )
shape = SubResource( 34 )

[node name="death_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.097

[node name="hit_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="Tween" type="Tween" parent="."]

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
material = SubResource( 35 )
position = Vector2( -0.118053, 1.75172 )
amount = 10
lifetime = 0.5
speed_scale = 2.0
local_coords = false
texture = ExtResource( 5 )
gravity = Vector2( 0, 0 )
color_ramp = SubResource( 36 )
anim_speed = 1.0
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
